[package]
name = "audio-lint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
colored = "2.0.0"
metaflac = "0.2.5"
pager = "0.16.1"
regex = "1.7.1"
spinner = "0.5.0"
unic-normal = "0.9.0"
walkdir = "2.3.2"
